# Calculando-preco-com-machine-learning

./: README.md  app.py  pyproject.toml
tests/: testes.ipynb
